# MachineLearning-Domestic-Flight-Fare-Prediction-Streamlit-Application

./: Dockerfile  LICENSE  Makefile  ProjectReadme.docx  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: adaboost.joblib
models/archive/: cabin_ord.joblib  ohe.joblib  scaler.joblib
models/model_drop.tf/: fingerprint.pb
models/model_drop.tf/variables/: variables.index
models/tf_keras_model/: fingerprint.pb  saved_model.pb
models/tf_model_12/: saved_model.pb
models/tf_model_12/variables/: variables.data-00000-of-00001  variables.index
notebooks/: Htun_NyanPaing-Adaboostregressor.ipynb  Patil_Monali-Tensorflow.ipynb  Yaputra_Michael_Tensorflow.ipynb  data_preparation.ipynb  merging_data_notebook.ipynb
notebooks/archive/: data_prep.ipynb  data_prep2.ipynb  tf_rgs.ipynb
src/data/: data_prep.py  performance.py
streamlit_application_service/: Dockerfile  README.md  docker-compose.yml  requirements.txt
streamlit_application_service/app/: streamlit_app.py
streamlit_application_service/models/: adaboost.joblib
streamlit_application_service/models/model_drop.tf/: keras_metadata.pb  saved_model.pb
streamlit_application_service/models/model_drop.tf/variables/: variables.data-00000-of-00001
streamlit_application_service/models/tf_keras_model/: keras_metadata.pb
streamlit_application_service/models/tf_model_12/: keras_metadata.pb
streamlit_application_service/src/: flightfare_display.py  flightfare_predictions.py
streamlit_application_service/utils/: utils.py
(+2 files in other folders)
