[tool.poetry]
name = "adv-mla-at3"
version = "0.1.0"
description = ""
authors = ["group_13"]
readme = "README.md"
packages = [{include = "adv_mla_at3"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "3.6.3"
pandas = "2.0.1"
scikit-learn = "1.2.2"
h5py = "^3.10.0"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
